k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app
  namespace: rag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
    spec:
      containers:
        - name: streamlit-container
          image: local-registry:5000/streamlit-ws-app:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
