k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: rag
spec:
  type: ClusterIP
  selector:
    app: streamlit-app
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
